--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -12,8 +12,9 @@ $sheeraqua: rgba(#85dbc2, 0.8);
 @mixin reset-list {
   padding-left: 0;
 
-  li {
+  * {
     list-style: none;
+    text-decoration: none;
   }
 }
 
