--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -3,6 +3,8 @@ $golden: #e8b866;
 $darkgray: #bcbdc0;
 $lightgray: #929598;
 
+$goldBorder: 5px solid $golden;
+
 $base-text-size: 36px;
 $base-font-family: 'Raleway', sans-serif;
 $base-font-weight: 400;
@@ -15,6 +17,8 @@ $sheeraqua: rgba(#85dbc2, 0.8);
   * {
     list-style: none;
     text-decoration: none;
+    padding: 0;
+    margin: 0;
   }
 }
 
