--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -7,25 +7,36 @@ h1,
 h2,
 h3 {
   font-family: 'Raleway', sans-serif;
-  font-size: 14px;
   color: white;
 }
 
 html {
   font-family: 'Raleway', sans-serif;
-  text-size-adjust: 100%;
   font-size: 14px;
+}
+
+.mainContainer {
+  height: 100vh;
+  border-bottom: $goldBorder;
+  margin: -10px -10px -10px -10px;
 }
 
 .navLinks {
   display: flex;
-  height: 100px;
+  position: fixed;
+  height: 80px;
   width: 100%;
   align-items: center;
   justify-content: flex-end;
-  background-color: $aqua;
-  border-bottom: 5px solid $golden;
+  background-color: $sheeraqua;
+  margin: -10px -5px 0 -5px;
+  border-bottom: $goldBorder;
   list-style: none;
+  z-index: 1;
+
+  // ul {
+  //   margin: 0;
+  // }
 
   li {
     display: inline;
@@ -45,7 +56,7 @@ html {
   }
 }
 .wrapper {
-  // position: relative;
+  margin: -5px;
 }
 
 .introBox {
@@ -53,15 +64,16 @@ html {
   align-items: center;
   flex-wrap: wrap;
   position: absolute;
-  bottom: 100px;
-  left: 50%;
+  bottom: 15%;
+  left: 30%;
   transform: (-50%, 0);
   height: 350px;
+  width: 600px;
 
   img {
     border-radius: 50%;
     margin-left: -100px;
-    border: 3px solid $golden;
+    border: $goldBorder;
     max-width: 200px;
   }
   .introText {
@@ -71,7 +83,7 @@ html {
   h1 {
     // height: 100px;
     align-self: center;
-    border-bottom: 5px solid $golden;
+    border-bottom: $goldBorder;
     width: 70%;
     padding-bottom: 10px;
   }
@@ -79,10 +91,12 @@ html {
     margin: 0;
     width: 80%;
     color: white;
+    font-size: 1.4em;
   }
 }
 
 .aboutMe {
   background-color: $golden;
   height:300px;
+  margin: -10px -10px -10px -10px;
 }
