--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -76,6 +76,7 @@ html {
     border: $goldBorder;
     max-width: 200px;
   }
+
   .introText {
     margin: 0 5px 10px 20px;
   }
@@ -97,6 +98,28 @@ html {
 
 .aboutMe {
   background-color: $golden;
-  height:300px;
+  height: 300px;
   margin: -10px -10px -10px -10px;
+  padding: 20px;
+  display: flex;
+
+  p{
+    margin: 15px;
+    font-size: 1.2em;
+    flex: 1;
+  }
+
+  img {
+    display: block;
+    margin: 0 auto;
+    padding: 10px;
+  }
+}
+
+.myWork {
+  background-color: $aqua;
+  height: 300px;
+  margin: -10px -10px -10px -10px;
+  padding: 20px;
+  display: flex;
 }
