--- a/src/styles/pagebreaks.css
+++ b/src/styles/pagebreaks.css
@@ -1,5 +1,13 @@
-@media screen and (max-width: 930px) {
+@media screen and (max-width: 730px) {
   .introBox {
     /*flex-direction: column;*/
+    img {
+      /*display: none;*/
+    }
+  }
+
+  .aboutMe {
+    flex-direction: column;
+    /*height: 600px;*/
   }
 }
