--- a/src/styles/pagebreaks.css
+++ b/src/styles/pagebreaks.css
@@ -1,10 +1,8 @@
 @media screen and (max-width: 730px) {
-  .introBox {
-    /*flex-direction: column;*/
-    img {
-      /*display: none;*/
-    }
+  .quote {
+    display: none;
   }
+
 
   .aboutMe {
     flex-direction: column;
