--- a/src/styles/matteFinish.scss
+++ b/src/styles/matteFinish.scss
@@ -1,12 +1,13 @@
 @import 'utility';
 
+
 .bgImage {
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  background-image: url('http://i.imgur.com/PwUvsiW.jpg');
+  background-image: url('../images/officeBG.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
