--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -1,7 +1,7 @@
-@import '_utility';
+@import 'utility';
 @import 'matteFinish';
 @import 'pagebreaks';
-@import '_resume';
+@import 'resume';
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,500,800');
 
 h1,
@@ -30,7 +30,6 @@ html {
   border-bottom: $goldBorder;
   margin: -10px -10px -10px -10px;
 }
-
 
 .navLinks {
   display: flex;
@@ -62,7 +61,7 @@ html {
   }
 
   .navBtn:hover {
-    transform: scale(1.0);
+    transform: scale(1);
     background-color: white;
 
     a {
@@ -76,6 +75,7 @@ html {
     text-align: center;
   }
 }
+
 .wrapper {
   margin: -5px;
 }
@@ -109,6 +109,7 @@ html {
     width: 70%;
     padding-bottom: 10px;
   }
+
   p {
     margin: 0;
     width: 80%;
