--- a/src/styles/resume.scss
+++ b/src/styles/resume.scss
@@ -1,15 +1,70 @@
 .Resume {
   display: grid;
-  max-width: 600px;
-  height: 100vh;
+  max-width: 90%;
+  margin: 0 auto;
+  height: 95vh;
   align-content: center;
-  grid-template-columns: 100px 300px 200px;
+  grid-template-columns: 50% 50%;
 
   .heading {
     grid-column: 2/3;
+    // grid-row: 1/2;
+  }
+
+  h2,
+  h3 {
+    color: black;
+    margin-top: 15px;
+    margin-bottom: 3px;
   }
 
   .education {
-    grid-column: 2/3;
+    grid-column: 1/3;
+    background-color: whitesmoke;
+    padding: 10px;
+    color: black;
+    margin-top: 80px;
+    margin-bottom: 1px;
+
+    .edu1 {
+      display: grid;
+    }
+
+    h4 {
+      grid-column: 1/2;
+      align-items: center;
+      margin: 2px;
+    }
+
+    .date {
+      grid-column: 1/2;
+      justify-self: start;
+    }
+
+    p {
+      margin-top: 2px;
+      margin-bottom: 2px;
+    }
+  }
+
+  .experience {
+    grid-column: 1/3;
+    background-color: whitesmoke;
+    padding: 10px;
+    color: black;
+    margin-top: 80px;
+    margin-bottom: 1px;
+
+    h2,
+    h3 {
+      color: black;
+      margin-top: 15px;
+      margin-bottom: 3px;
+    }
+
+    p {
+      margin-top: 2px;
+      margin-bottom: 2px;
+    }
   }
 }
