--- a/src/styles/pagebreaks.scss
+++ b/src/styles/pagebreaks.scss
@@ -1,11 +1,41 @@
-@media screen and (max-width: 730px) {
-  .quote {
-    display: none;
-  }
+@media screen and (min-width: 481px) {
+  .navLinks {
+    flex-direction: row;
+    position: fixed;
+    height: 80px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    background-color: $sheeraqua;
+    margin: -10px -5px 0 -5px;
+    border-bottom: $goldBorder;
+    list-style: none;
+    z-index: 1;
 
+    .navBtn {
+      display: inline;
+      flex: 0 1 auto;
+      width: 100px;
+      border: 1px solid white;
+      margin-right: 50px;
+      font-weight: 300;
+      text-align: center;
+      transition: 0.5s;
+    }
 
-  .aboutMe {
-    flex-direction: column;
-    /*height: 600px;*/
+    .navBtn:hover {
+      transform: scale(1);
+      background-color: white;
+
+      a {
+        color: $aqua;
+      }
+    }
+
+    a {
+      color: white;
+      text-decoration: none;
+      text-align: center;
+    }
   }
 }
