--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -19,7 +19,7 @@ h3 {
 
 html {
   font-family: 'Raleway', sans-serif;
-  font-size: 16px;
+  font-size: $base-text-size;
 }
 
 .quote {
@@ -44,13 +44,11 @@ html {
   background-color: $golden;
   // min-height: 300px;
   // margin: -10px -10px -10px -10px;
-  // padding: 20px;
-  // position: fixed;
-  bottom: 0;
+  margin: 20px;
 
   p {
     margin: 15px;
-    font-size: 0.9em;
+    font-size: 1.1em;
     font-weight: 300;
     flex: 1;
     text-align: center;
@@ -59,7 +57,7 @@ html {
   img {
     display: block;
     margin: 0 auto;
-    padding: 10px;
+    padding: 5px;
   }
 }
 
