--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -62,18 +62,14 @@ html {
 }
 
 .myWork {
-  background-color: $aqua;
-  height: 300px;
-  margin: -10px -10px -10px -10px;
-  padding: 20px;
   display: flex;
-  position: fixed;
-  bottom: 0;
+  flex-direction: column;
+  justify-content: center;
+  margin: 20px;
+  background-color: $aqua;
 
   .workee {
     display: flex;
-    align-content: center;
-    align-items: center;
   }
 
   a {
