--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -33,3 +33,10 @@ $sheeraqua: rgba(#85dbc2, 0.8);
     min-height: 100%;
   }
 }
+
+@keyframes slideIn {
+  0% { transform: translateY(400px); }
+  60% { transform: translateY(-50px); }
+  80% { transform: translateY(10px); }
+  100% { transform: translateY(0); }
+}
