--- a/src/styles/matteFinish.scss
+++ b/src/styles/matteFinish.scss
@@ -9,7 +9,7 @@
   background-image: url('../images/officeBG.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
+  // background-attachment: fixed;
   z-index: -2;
   filter: brightness(90%) contrast(90%) blur(2px) grayscale(10%);
 }
