--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -29,8 +29,9 @@ $sheeraqua: rgba(#85dbc2, 0.8);
   height: 100%;
 
   body,
-  #root {
-    min-height: 100%;
+  #root,
+  #root > div {
+    min-height: 100vh;
   }
 }
 
