--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -4,33 +4,30 @@
 @import 'resume';
 @import 'nav';
 @import 'intro';
+@import 'footer';
 @import url('https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700');
 
 h1,
 h2,
 h3 {
-  font-family: 'Anonymous Pro', monospace;
   color: white;
 }
 
 html {
-  font-family: 'Raleway', sans-serif;
+  @include full-height;
+  font-family: 'Anonymous Pro', monospace;
   font-size: $base-text-size;
 }
 
-.quote {
-  color: white;
-  font-size: 2em;
-  position: fixed;
-  top: 10px;
-  z-index: 1;
-  margin: 10px 20px 30px 30px;
+.App {
+  display: flex;
+  flex-direction: column;
 }
 
 .mainContainer {
   display: flex;
-  flex-direction: column;
-  height: 100vh;
+  flex: 1;
+  justify-content: center;
 }
 
 .aboutMe {
@@ -38,53 +35,80 @@ html {
   flex-direction: column;
   justify-content: center;
   background-color: $golden;
-  // min-height: 300px;
-  // margin: -10px -10px -10px -10px;
-  margin: 20px;
-  box-shadow: 1px 1px black;
+  margin: 15px;
 
   p {
-    margin: 15px;
+    margin: 5px;
+    margin-left: 7px;
     font-size: 1.1em;
-    font-weight: 300;
+    font-weight: 400;
     flex: 1;
-    text-align: center;
+    text-align: left;
   }
 
   img {
     display: block;
     margin: 0 auto;
+    // height: 50px;
+    // width: 50px;
     padding: 5px;
   }
+
+  .glasses {
+    height: 22px;
+    width: 50px;
+  }
+
+  .TIY {
+    height: 50px;
+    width: 50px;
+  }
+
+  .light {
+    height: 57px;
+    width: 50px;
+  }
 }
 
-.myWork {
-  min-height: 900px;
-  // background-color: $aqua;
-  margin: 20px;
+.projects {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 300px;
+  margin: 5px 20px;
 
-  .workee {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  h2 {
+    margin: 0;
+    align-self: center;
   }
 
-  .Kapture {
-    display: none;
-    width: 200px;
-    height: 200px;
-  }
-
-  a {
-    border: 2px solid white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 275px;
-    height: 300px;
+  p {
+    width: 400px;
+    align-self: center;
     margin: 5px;
-    text-align: center;
-    text-decoration: none;
+    margin-left: 10px;
+    font-size: 1.1em;
+    font-weight: 300;
+    text-align: left;
     color: white;
   }
+
+ .project {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    border-bottom: 2px solid white;
+    // margin-left: 2px;
+    padding: 15px;
+  }
+
+  .Kapture  {
+    width: 200px;
+    height: 200px;
+    margin: 5px;
+  }
 }
+
+// .ResumeImg {
+//   display: none;
+// }
