--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,3 +1,9 @@
+@media screen and (max-width: 767px) {
+  .navLinks {
+    display: none;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .navLinks {
     display: flex;
@@ -45,5 +51,11 @@
     font-size: 2em;
     color: $golden;
     text-shadow: 1px 1px $golden;
+  }
+  .diamonds {
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+    margin-bottom: 30px;
   }
 }
