--- a/src/styles/_utility.scss
+++ b/src/styles/_utility.scss
@@ -5,9 +5,9 @@ $lightgray: #929598;
 $green: rgb(49, 66, 61);
 
 $goldBorder: 5px solid $golden;
-
+$heading-font-fam: 'Josefin Sans', sans-serif;
+$body-font-fam: 'Merriweather', serif;
 $base-text-size: 14px;
-$base-font-family: 'Raleway', sans-serif;
 $base-font-weight: 400;
 $sheeraqua: rgba(#85dbc2, 0.8);
 
