--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -2,6 +2,7 @@
 @import 'matteFinish';
 @import 'pagebreaks';
 @import 'resume';
+@import 'about';
 @import 'nav';
 @import 'intro';
 @import 'footer';
@@ -35,46 +36,6 @@ html {
   justify-content: center;
 }
 
-.aboutMe {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: $golden;
-  margin: 15px;
-
-  p {
-    margin: 5px;
-    margin-left: 7px;
-    font-size: 1.1em;
-    font-weight: 400;
-    flex: 1;
-    text-align: left;
-  }
-
-  img {
-    display: block;
-    margin: 0 auto;
-    // height: 50px;
-    // width: 50px;
-    padding: 5px;
-  }
-
-  .glasses {
-    height: 22px;
-    width: 50px;
-  }
-
-  .TIY {
-    height: 50px;
-    width: 50px;
-  }
-
-  .light {
-    height: 57px;
-    width: 50px;
-  }
-}
-
 .projects {
   display: flex;
   flex-direction: column;
@@ -96,6 +57,10 @@ html {
     font-weight: 300;
     text-align: left;
     color: white;
+  }
+
+  ul.myWork {
+    list-style: none;
   }
 
   .project {
