--- a/src/styles/resume.scss
+++ b/src/styles/resume.scss
@@ -116,9 +116,8 @@ ul.bullets {
 }
 
 @media screen and (max-width: 481px) {
-  .diamonds
-  .bullets,
-  li,
+  .diamonds,
+  ul.bullets,
   .asa,
   .otherExp {
     display: none;
