--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 100px;
+  animation: slideIn 1s linear;
 
   img {
     border-radius: 50%;
