--- a/src/styles/pagebreaks.scss
+++ b/src/styles/pagebreaks.scss
@@ -2,6 +2,10 @@
   div.introBox {
     margin-top: 300px;
   }
+
+  .pHeader {
+    width: 400px;
+  }
 }
 @media screen and (min-width: 768px) {
   footer {
