--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -3,16 +3,18 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: $golden;
+  background-color: rgba(0, 0, 0, 0.7);
   margin: 15px;
   animation: slideIn 1s linear;
 
   p {
     margin: 5px;
     margin-left: 7px;
-    font-size: 1.1em;
+    font-size: 1.5em;
     flex: 1;
     text-align: left;
+    color: $golden;
+    font-family: $heading-font-fam;
   }
 
   img {
@@ -24,6 +26,7 @@
   .glasses {
     height: 26px;
     width: 60px;
+    box-sizing: 5px 5px white;
   }
 
   .TIY {
@@ -39,13 +42,30 @@
 
 
 @media screen and (min-width: 768px) {
+  .aboutContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .mypics {
+    align-self: center;
+  }
+  // .wapper {
+  //   position: fixed;
+  //   top: 100px;
+  //   background-color: $golden;
+  //   width: 700px;
+  //   height: 325px;
+  // }
+
   .aboutMe {
     flex-direction: column;
     position: relative;
-    top: 100px;
-    width: 650px;
+    top: 10px;
     height: 300px;
     animation: slideIn 1s linear;
+    // border: 3px inset black;
 
     .subAbout {
       display: flex;
