--- a/src/styles/matteFinish.scss
+++ b/src/styles/matteFinish.scss
@@ -3,7 +3,7 @@
 .bgImage {
   background-image: url('../images/officeBG.jpg');
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
@@ -22,7 +22,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: $aqua;
+  background-color: $golden;
   opacity: 0.2;
-  z-index: -2;
+  z-index: -1;
 }
