--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -2,6 +2,7 @@
   .navLinks {
     display: none;
   }
+
   .decor {
     display: none;
   }
@@ -16,10 +17,11 @@ padding: 0.5em;
     align-self: center;
     justify-content: space-around;
     position: fixed;
-    width: 100%;
+    width: 700px;
     top: 0;
     border-bottom: 1px solid darken($golden, 10%);
-    padding-left: 0;
+    padding-left: 100%;
+    padding-right: 100%;
     margin: 0 auto;
     list-style: none;
     z-index: 1;
@@ -31,7 +33,6 @@ padding: 0.5em;
       margin: 5px;
       padding: 5px;
       font-family: $heading-font-fam;
-      font-weight: 300;
       text-align: center;
       transition: 0.5s;
       width: 100%;
@@ -43,28 +44,27 @@ padding: 0.5em;
     }
 
     a:link {
-      color: white;
+      color: $golden;
       text-decoration: none;
       text-align: center;
-      width: 150px;
+      width: 100px;
+      font-weight: 100;
     }
 
     a:visited {
-      color: white;
+      color: $golden;
     }
 
     .navBtn:hover {
       transform: scale(1);
-      // background-color: $golden;
-      border: none;
 
       .hov {
-        color: $golden;
+        color: white;
       }
     }
 
     a:active {
-      color: $golden;
+      color: white;
     }
   }
 
