--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -84,6 +84,11 @@ html {
     padding: 15px;
   }
 
+  .github {
+    align-items: flex-end;
+    margin: 2px;
+  }
+
   .Kapture {
     width: 200px;
     height: 200px;
