--- a/src/styles/matteFinish.scss
+++ b/src/styles/matteFinish.scss
@@ -1,5 +1,18 @@
 @import 'utility';
 
+ .blackBg {
+  background-color: rgba(0, 0, 0, 0.8);
+  height: 100%;
+  // width: 100%;
+  padding: -20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+}
+
 .bgImage {
   background-image: url('../images/officeBG.jpg');
   height: 100%;
@@ -17,12 +30,12 @@
 }
 
 #color_layer {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: $golden;
-  opacity: 0.2;
+  opacity: 0.1;
   z-index: -1;
 }
