--- a/src/styles/pagebreaks.scss
+++ b/src/styles/pagebreaks.scss
@@ -7,6 +7,7 @@
     width: 400px;
   }
 }
+
 @media screen and (min-width: 768px) {
   footer {
     display: none;
@@ -18,5 +19,11 @@
   .myWork {
     max-width: 1000px;
     display: flex;
+  }
+
+  .webContainer {
+    max-width: 1000px;
+    display: flex;
+    flex-direction: row;
   }
 }
