--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -38,12 +38,12 @@ html {
 }
 
 .pHeader {
-  width: 300px;
+  // width: 300px;
+  margin-top: 50px;
   padding: 15px;
   display: flex;
   flex-direction: column;
   align-self: center;
-  background-color: $golden;
   animation: slideIn 1s linear;
 }
 
@@ -57,18 +57,18 @@ html {
   h2 {
     margin: 0;
     align-self: center;
-    color: black;
+    color: $golden;
   }
 
   p {
-    width: 300px;
+    width: 100%;
     align-self: center;
     margin: 5px;
     margin-left: 10px;
     font-size: 1.1em;
     font-weight: 300;
     text-align: left;
-    color: black;
+    color: $golden;
   }
 
   ul.myWork {
@@ -79,7 +79,7 @@ html {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    border-bottom: 2px solid $golden;
+    // border-bottom: 2px solid $golden;
     // margin-left: 2px;
     padding: 15px;
   }
@@ -137,4 +137,35 @@ html {
       color: $golden;
     }
   }
+}
+
+.WebWork {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 50px;
+
+  h3 {
+    text-align: center;
+  }
+
+  p {
+    color: $golden;
+  }
+}
+
+
+.webContainer {
+  // width: 350px;
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+  // flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.webEx {
+  width: 300px;
+  padding: 5px;
 }
