--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -3,6 +3,7 @@
 @import 'pagebreaks';
 @import 'resume';
 @import 'about';
+@import 'work';
 @import 'nav';
 @import 'intro';
 @import 'footer';
@@ -47,55 +48,6 @@ html {
   animation: slideIn 1s linear;
 }
 
-.projects {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  min-height: 300px;
-  margin: 5px 20px;
-
-  h2 {
-    margin: 0;
-    align-self: center;
-    color: $golden;
-  }
-
-  p {
-    width: 100%;
-    align-self: center;
-    margin: 5px;
-    margin-left: 10px;
-    font-size: 1.1em;
-    font-weight: 300;
-    text-align: left;
-    color: $golden;
-  }
-
-  ul.myWork {
-    list-style: none;
-  }
-
-  .project {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    // border-bottom: 2px solid $golden;
-    // margin-left: 2px;
-    padding: 15px;
-  }
-
-  .github {
-    align-items: flex-end;
-    margin: 2px;
-  }
-
-  .Kapture {
-    width: 200px;
-    height: 200px;
-    margin: 5px;
-  }
-}
-
 .contactWrapper {
   display: flex;
   flex-direction: row;
@@ -106,6 +58,7 @@ html {
   height: 450px;
   align-self: center;
 }
+
 .contact {
   // position: fixed;
   // left: 20%;
@@ -137,35 +90,17 @@ html {
       color: $golden;
     }
   }
-}
 
-.WebWork {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 50px;
-
-  h3 {
-    text-align: center;
-  }
-
-  p {
+  .smLinks {
+    display: flex;
     color: $golden;
+
+    @include reset-list;
+    margin: 10px;
+    justify-content: space-around;
+
+    li {
+
+    }
   }
-}
-
-
-.webContainer {
-  // width: 350px;
-  display: flex;
-  flex: 1;
-  flex-wrap: wrap;
-  // flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.webEx {
-  width: 300px;
-  padding: 5px;
 }
