--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -7,10 +7,18 @@ h5 {
   font-size: 1.2em;
 }
 
+.topMar60 {
+  margin-top: 60px;
+}
+
+a.pic1 {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 1px;
+}
+
 .pHeader {
   width: 100%;
-  margin: 60px 0 0;
-  padding: 15px;
+  padding: 7px;
   display: flex;
   flex-direction: column;
   align-self: center;
@@ -18,8 +26,7 @@ h5 {
 
   h2 {
     width: 80%;
-    margin-left: 10%;
-    color: $golden;
+    margin: 7px 10%;
     border-bottom: 1px solid $golden;
   }
 
@@ -29,10 +36,8 @@ h5 {
     align-self: center;
     font-family: $heading-font-fam;
     font-size: 1.3em;
-    line-height: 1.1em;
     font-weight: 400;
     text-align: left;
-    color: $golden;
   }
 }
 
@@ -83,7 +88,6 @@ h5 {
 
   h3 {
     text-align: left;
-    color: $golden;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 5px;
   }
